Bug 44411 - Spin-button doesn't release mouse capturing
Summary: Spin-button doesn't release mouse capturing
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Forms (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Kent Tamura
URL: http://crbug.com/52201
Keywords:
Depends on:
Blocks: 27968
  Show dependency treegraph
 
Reported: 2010-08-23 02:21 PDT by Kent Tamura
Modified: 2010-08-25 02:31 PDT (History)
6 users (show)

See Also:


Attachments
Patch (6.39 KB, patch)
2010-08-23 03:44 PDT, Kent Tamura
no flags Details | Formatted Diff | Diff
Patch 2 (improved test message) (6.57 KB, patch)
2010-08-23 17:34 PDT, Kent Tamura
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Kent Tamura 2010-08-23 02:21:02 PDT
Spin-button doesn't release mouse capturing
Comment 1 Kent Tamura 2010-08-23 03:44:31 PDT
Created attachment 65100 [details]
Patch
Comment 2 Kent Tamura 2010-08-23 17:34:17 PDT
Created attachment 65186 [details]
Patch 2 (improved test message)
Comment 3 Shinichiro Hamaji 2010-08-25 01:05:20 PDT
Comment on attachment 65186 [details]
Patch 2 (improved test message)

Looks good.

WebCore/ChangeLog:8
 +          - LeftButton should be checked only for clickEvent.
Please note that mouse move worked even before this change because of the reason you described to me locally.
Comment 4 Kent Tamura 2010-08-25 01:39:37 PDT
Thank you for reviewing.

(In reply to comment #3)
> WebCore/ChangeLog:8
>  +          - LeftButton should be checked only for clickEvent.
> Please note that mouse move worked even before this change because of the reason you described to me locally.

Added a sentence.


Committed as r65997.
Comment 5 WebKit Review Bot 2010-08-25 02:31:47 PDT
http://trac.webkit.org/changeset/65997 might have broken GTK Linux 64-bit Debug