Fix a bug that a spin-button doesn't release mouse capturing https://bugs.webkit.org/show_bug.cgi?id=44411

Reviewed by Shinichiro Hamaji

WebCore:

- LeftButton should be checked only for clickEvent.
  Note that this change doesn't change the behavior because
  button() value is initialized with LeftButton even for
  mousemoveEvent.
- Should pass a SpinButtonElement node to setCapturingMouseEventsNode().

Test: fast/forms/input-spinbutton-capturing.html

* rendering/TextControlInnerElements.cpp:
(WebCore::SpinButtonElement::defaultEventHandler):

LayoutTests:

* fast/forms/input-spinbutton-capturing-expected.txt: Added.
* fast/forms/input-spinbutton-capturing.html: Added.
* fast/forms/script-tests/input-spinbutton-capturing.js: Added.

Canonical link: https://commits.webkit.org/56776@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65997 268f45cc-cd09-0410-ab3c-d52691b4dbfc